# simple-pdf-merger

./: Cargo.toml  README.md
src/: files_to_open.rs  main.rs  merge_files.rs
