[package]
name = "simple_pdf_merger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
rfd = "0.11.3"
lopdf = "0.29.0"
rayon = "1.7.0"
egui-toast = "0.6.0"
strsim = "0.10.0"
anyhow = "1.0.70"
